Fail hack cannot detect selection. Use to one reward.

--- a/Config/XComHackPlus.ini
+++ b/Config/XComHackPlus.ini
@@ -1,7 +1,7 @@
 ; Config for HackPlus mod
 [HackPlus.HackPlusConfig]
 +RandomizeReward=false
-+HackPointRewardEasyOnFail=1
++HackPointRewardEasyOnFail=1 ; currently ignored
 +HackPointRewardOnFail=2
 +HackPointRewardEasyOnSuccess=3
 +HackPointRewardOnSuccess=5
