Add diminishing returns, remove debug code

--- a/Config/XComHackPlus.ini
+++ b/Config/XComHackPlus.ini
@@ -5,6 +5,8 @@
 +HackPointRewardOnFail=1
 +HackPointRewardEasyOnSuccess=3
 +HackPointRewardOnSuccess=5
++DiminishingReturns=false
++DiminishingReturnsStartsAbove=80 ; max reward is reduced by one for every 20 levels above this level
 ; debug settings
 +AlwaysSucceed=false
 +FreeAction=false
